--- a/CustomerManagement.API/CustomerManagement.API.csproj
+++ b/CustomerManagement.API/CustomerManagement.API.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>c1af6c96-4190-4e57-8f74-3a1e64f63bab</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
