--- a/CustomerManagement.API/appsettings.json
+++ b/CustomerManagement.API/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=CustomerMnagement;User Id=postgres;Password=Kawasaki2512;"
+    "DefaultConnection": "Host=monorail.proxy.rlwy.net;Port=16940;Database=CustomerMnagement;User Id=postgres;Password=finxmOBVECtCgmRVZNvKuPoGyVrMrYsI;"
 
   },
   "AllowedHosts": "*"
